# dcui

./: .flake8  README.md  pyproject.toml  requirements.txt  setup.py
dcui/: __init__.py  app.py  dcui.css  docker-compose.2.yml  docker-compose.yml  docker_compose.py  hooks.py  utils.py
dcui/components/: docker_table.py  interactive_shell.py  logs.py  panes.py
