[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 58.2.0',
]

[tool.pylint]
profile = "black"
multi_line_output = 3

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv.*
    | .*\/migrations
    | _build
    | buck-out
    | build
    | dist
    | scripts
    | debian
    | Pipfile
    | Pipefile.lock
    | requirements.txt
    | Makefile
    | README.md
    | __pycache__
    | \.json
  )/
'''
