[project]
name = "dcui"
version = "0.0.1"
description = "DCUI"
# readme = "README.md"
packages = [{ include = "dcui" }]
requires-python = ">3.10,<4"

dependencies = [
  "textual~=3.0.0",
  "pyyaml",
  "rich>=13.9.4",
  "python-dotenv",
  "pyte",
]

[dependency-groups]
dev = [
  "textual-dev>=1.7.0",
]

[project.scripts]
dcui= 'dcui.app:main'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "F401" # requiring alias or re-export for imported objects
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

exclude = [
  "venv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
